# videoRecorder

./: .gitignore  CMakeLists.txt  license.txt  vvcl.cpp
VideoCompressionTest/: CMakeLists.txt  VideoCompressionTest.cpp
vvcl/: CMakeLists.txt  vvcl.cpp  vvcl.h
